setting up basic elements

--- a/index.html
+++ b/index.html
@@ -2,10 +2,103 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>From Portland to Portland</title>
+  <link rel="stylesheet" href="pages/index.css">
   <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-  <header class="header"></header>
+  <div class="page">
+    <header class="header border">
+      <nav class="header__nav border-block">
+        <img class="logo" src="#" alt="The USA Logo">
+          <ul class="header__list">
+            <li class="header__list-item">
+              <a class="header__lang-link" href="#">En</a>
+            </li>
+            <li class="header__list-item">
+              <a class="header__lang-link" href="#">Es</a>
+            </li>
+          </ul>
+      </nav>
+    </header>
+
+    <main class="content border">
+      <section class="lead border">
+        <h1 class="lead__title">From Portland to Portland</h1>
+        <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
+        <img src="#" alt="Portland Scenic Mountain View">
+        <p class="lead__caption">YOUR JOURNEY STARTS HERE</p>
+      </section>
+
+      <section class="intro border">
+        <h2 class="intro__title">Know the country you live in a little better</h2>
+        <p class="intro__subtitle">That's exactly what we have arranged for you via this travel story</p>
+        <p class="intro__paragraph">Need more action and adventure in your life instead of the same old routine? From Portland, Maine to Portland, Oregon we're going to take you on an exciting journey through some unknown regions of your country. Leave the car at home and travel by bike starting in New England where it all began. You will pass through 12 beautiful states, covering a total of 3,600 miles, and accomplish 3 monumental missions. Partying and taking a selfie with a famous rock star, donating $1 to a billionaire to help eradicate polio in Africa, and even stopping by famous author Stephen King's house to say hi and asking him to sign your favorite book.</p>
+        <ul class="intro__list">
+          <li class="intro__list-item">
+            <p class="intro__list-text"><span class="intro__span-accent">Distance (miles) </span>3,644</p>  
+          </li>
+          <li class="intro__list-item">
+            <p class="intro__list-text"><span class="intro__span-accent">Travel time (days) </span>22</p>  
+          </li>
+          <li class="intro__list-item">
+            <p class="intro__list-text"><span class="intro__span-accent">Highest point (feet) </span>9,613</p>  
+          </li>
+          <li class="intro__list-item">
+            <p class="intro__list-text"><span class="intro__span-accent">Lowest point (feet) </span>-3</p>  
+          </li>
+        </ul>
+      </section>
+
+      <section class="photo-grid border">
+        <ul class="photo-grid__list">
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="#" alt="Coastal Road">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="#" alt="">
+          </li>
+        </ul>
+      </section>
+      
+      <section class="places border">
+        <ul class="places__list">
+          <li class="places__item">
+            <h2 class="places__title">Maine</h2>
+            <div class="places__website">
+              <h3 class="places__url-heading">URL</h3>
+              <a class="places__link" href="global.llbean.com">global.llbean.com</a>
+            </div>
+            <img class="places__image" src="#" alt="Lighthouse on Rocky Coast">
+            <p class="places__paragraph"></p>
+            <p class="places__paragraph"></p>
+            <p class="places__paragraph"></p>
+          </li>
+        </ul>
+      </section>
+      
+      <section class="cover border">
+        <h2 class="cover__title border-block">Historic Route 66</h2>
+        <p class="cover__subtitle border-block">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
+        <!-- __overlay -->
+        <!-- __background -->
+      </section>
+    </main>
+    <footer class="footer border">
+      <div class="footer__blocks border-block">
+        <nav class="footer__block">
+          <ul class="footer__list">
+            <li class="footer__list-item"><a class="footer__link" href="#">Maps</a></li>
+            <li class="footer__list-item"><a class="footer__link" href="#">Weather</a></li>
+            <li class="footer__list-item"><a class="footer__link" href="#">Calendar</a></li>
+          </ul>
+        </nav>
+        <div class="footer__block">
+          <p class="footer__author">&#169; 2021. Yury Choe</p>
+        </div>
+      </div>
+    </footer>
+  </div>
 </body>
 </html> 
