--- a/index.html
+++ b/index.html
@@ -2,36 +2,38 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>From Portland to Portland</title>
   <link rel="stylesheet" href="pages/index.css">
-  <link rel="stylesheet" href="./style.css">
 </head>
-<body>
-  <div class="page">
-    <header class="header border">
-      <nav class="header__nav border-block">
-        <img class="logo" src="#" alt="The USA Logo">
-          <ul class="header__list">
-            <li class="header__list-item">
-              <a class="header__lang-link" href="#">En</a>
-            </li>
-            <li class="header__list-item">
-              <a class="header__lang-link" href="#">Es</a>
-            </li>
-          </ul>
+<body class="page">
+  <div class="page__wrapper">
+
+    <header class="header">
+      <nav class="header__nav-bar border-green">
+        <img class="logo" src="images/logo.svg" alt="The USA Logo">
+        <ul class="header__list">
+          <li class="header__list-item header__list-item_active">
+            <a class="header__lang-link" href="#">En</a>
+          </li>
+          <li class="header__list-item">
+            <a class="header__lang-link" href="#">Es</a>
+          </li>
+        </ul>
       </nav>
     </header>
 
-    <main class="content border">
-      <section class="lead border">
+    <main class="main">
+
+      <section class="lead">
         <h1 class="lead__title">From Portland to Portland</h1>
         <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
-        <img src="#" alt="Portland Scenic Mountain View">
-        <p class="lead__caption">YOUR JOURNEY STARTS HERE</p>
+        <img class="lead__image" src="images/lead-mountains.jpg" alt="Portland Mountains">
+        <p class="lead__caption">Your journey starts here</p>
       </section>
 
-      <section class="intro border">
+      <section class="intro">
         <h2 class="intro__title">Know the country you live in a little better</h2>
         <p class="intro__subtitle">That's exactly what we have arranged for you via this travel story</p>
         <p class="intro__paragraph">Need more action and adventure in your life instead of the same old routine? From Portland, Maine to Portland, Oregon we're going to take you on an exciting journey through some unknown regions of your country. Leave the car at home and travel by bike starting in New England where it all began. You will pass through 12 beautiful states, covering a total of 3,600 miles, and accomplish 3 monumental missions. Partying and taking a selfie with a famous rock star, donating $1 to a billionaire to help eradicate polio in Africa, and even stopping by famous author Stephen King's house to say hi and asking him to sign your favorite book.</p>
@@ -51,18 +53,48 @@
         </ul>
       </section>
 
-      <section class="photo-grid border">
+      <section class="photo-grid">
         <ul class="photo-grid__list">
           <li class="photo-grid__item">
-            <img class="photo-grid__image" src="#" alt="Coastal Road">
+            <img class="photo-grid__image" src="images/photo-grid-highway.jpg" alt="coastal highway">
           </li>
           <li class="photo-grid__item">
-            <img class="photo-grid__image" src="#" alt="">
+            <img class="photo-grid__image" src="images/photo-grid-lake.jpg" alt="lake">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-seagulls.jpg" alt="seagulls">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-boise.jpg" alt="boise forest">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-fog.jpg" alt="fog">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-valley.jpg" alt="misty valley">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-pass.jpg" alt="mountain pass">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-twig.jpg" alt="floral twig">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-clouds.jpg" alt="clouds over hills">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-oasis.jpg" alt="desert oasis">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-wires.jpg" alt="grassy hills">
+          </li>
+          <li class="photo-grid__item">
+            <img class="photo-grid__image" src="images/photo-grid-road.jpg" alt="road to nowhere">
           </li>
         </ul>
       </section>
       
-      <section class="places border">
+      <section class="places">
         <ul class="places__list">
           <li class="places__item">
             <h2 class="places__title">Maine</h2>
@@ -70,23 +102,77 @@
               <h3 class="places__url-heading">URL</h3>
               <a class="places__link" href="global.llbean.com">global.llbean.com</a>
             </div>
-            <img class="places__image" src="#" alt="Lighthouse on Rocky Coast">
-            <p class="places__paragraph"></p>
-            <p class="places__paragraph"></p>
-            <p class="places__paragraph"></p>
+            <img class="places__image" src="images/place-maine.jpg" alt="Maine Lighthouse Rocky Coast">
+            <div class="places__paragraph-block">
+              <p class="places__paragraph">Still, as sparsely populated as it was in the 1600s, this is an extraordinary and highly underrated state full of rich history and majestic natural beauty. Maine is the main state you want to be sure not to miss. As your journey is going to be a long one, you had best be prepared for an arduous trek.</p>
+              <p class="places__paragraph">Thankfully, not only is Maine home to the very first European settlers on US territory in the era of Vikings, but is also home to L.L. Bean, which is a great company to grab a super sturdy backpack from for your 3-month expedition.</p>
+              <p class="places__paragraph">Average cost: $80-100.</p>
+            </div>
+          </li>
+          <li class="places__item">
+            <h2 class="places__title">New Hampshire</h2>
+            <div class="places__website">
+              <h3 class="places__url-heading">URL</h3>
+              <a class="places__link" href="timberland.com">timberland.com</a>
+            </div>
+            <img class="places__image" src="images/place-new-hampshire.jpg" alt="New Hampshire Valley Road">
+            <div class="places__paragraph-block">
+              <p class="places__paragraph">There's no better place to lose yourself in nature than in springtime New Hampshire. As serene and beautiful as it was in the 1700s, this state is still much less traveled than its neighbors to the South. So enjoy it while it lasts.</p>
+              <p class="places__paragraph">You won't be on your bike the whole time, so doesn't it make sense to pick up some extra footwear? Fortunately for you, the best outdoor shoe company in the history of the world proudly hails from this state. Cycle by the Timberland headquarters in Stratham, and pick up a pair of rugged, waterproof boots to keep your feet dry. Fitting for unpredictable weather you may be confronted by while passing through the Appalachians. These boots are also better than cycling shoes when pitching a tent.</p>
+              <p class="places__paragraph">Average cost: $100-150.</p>
+            </div>
+          </li>
+          <li class="places__item">
+            <h2 class="places__title">New York</h2>
+            <div class="places__website">
+              <h3 class="places__url-heading">URL</h3>
+              <a class="places__link" href="ge.com">ge.com</a>
+            </div>
+            <img class="places__image" src="images/place-new-york.jpg" alt="New York City Road">
+            <div class="places__paragraph-block">
+              <p class="places__paragraph">Not only famous for “The Big Apple,” the state of NY also has several other reasons for going down in history. Since the late 1800s Schenectady, “The City that Lights and Hauls the World,” has been home to the world-famous General Electric Company.</p>
+              <p class="places__paragraph">This is where modern power generators were born as well as contemporary means of transmitting energy. So we figured this would be the perfect place to find a batteryless dynamo light for your bicycle to help you see through those dark lonely roads on your adventure. Such a light from GE will set you back about $10-20.</p>
+            </div>
+          </li>
+          <li class="places__item">
+            <h2 class="places__title">Erie, PA</h2>
+            <div class="places__website">
+              <h3 class="places__url-heading">URL</h3>
+              <a class="places__link" href="fws.gov">fws.gov</a>
+            </div>
+            <img class="places__image" src="images/place-pennsylvania.jpg" alt="Pennsylvania Erie">
+            <div class="places__paragraph-block">
+              <p class="places__paragraph">Erie, Pennsylvania, not to be confused with the word “eerie,” although it can be from time to time, is another town worth passing through for several different reasons. While it might be most famously known as the scene of the Gettysburg address delivered by Mr. Lincoln during the Civil war, Pennsylvania also has produced a rather decent-sized Amish community (eerie, huh?)</p>
+              <p class="places__paragraph">The reason we've brought you here today, if you haven't already guessed, can be summed up by using one delicious word: chocolate. Hershey's is a Pennsylvania-based company. Most likely, one of the tastiest missions you'll ever embark on during this tour, try to find an Amish friend and enjoy a bar in the National Wildlife Refuge on your way to Erie and have an extra eerie time!</p>
+              <p class="places__paragraph">The current cost of a Hershey's Chocolate bar: about 60¢.</p>
+            </div>
+          </li>
+          <li class="places__item">
+            <h2 class="places__title">Ohio</h2>
+            <div class="places__website">
+              <h3 class="places__url-heading">URL</h3>
+              <a class="places__link" href="cedarpoint.com">cedarpoint.com</a>
+            </div>
+            <img class="places__image" src="images/place-ohio.jpg" alt="Windmill">
+            <div class="places__paragraph-block">
+              <p class="places__paragraph">From the college capital of Columbus to the clean coastline of Cleveland, Ohio is a truly hidden gem. Earthquakes are surprisingly common in this particular region of North America, over 200 of which have registered with a magnitude of 2 or higher since 1776. However, earthquakes aren't the only thing shaking this centrally located state. One of the country's largest and oldest roller coaster parks is waiting to ROCK your world in Sandusky, Ohio! This will presumably be one of the most thrilling quests you'll ever complete (provided you can stomach it). Take a much-deserved break to ride as many roller coasters as you can before continue your bike ride!</p>
+              <p class="places__paragraph">The cost of a daily ticket: about $100.</p>
+            </div>
           </li>
         </ul>
       </section>
       
-      <section class="cover border">
-        <h2 class="cover__title border-block">Historic Route 66</h2>
-        <p class="cover__subtitle border-block">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
+      <section class="cover">
+        <h2 class="cover__title border-green">Historic Route 66</h2>
+        <p class="cover__subtitle border-green">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
         <!-- __overlay -->
         <!-- __background -->
       </section>
+
     </main>
-    <footer class="footer border">
-      <div class="footer__blocks border-block">
+
+    <footer class="footer">
+      <div class="footer__blocks">
         <nav class="footer__block">
           <ul class="footer__list">
             <li class="footer__list-item"><a class="footer__link" href="#">Maps</a></li>
