--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="page__wrapper">
 
     <header class="header">
-      <nav class="header__nav-bar border-green">
+      <nav class="header__nav-bar">
         <img class="logo" src="images/logo.svg" alt="The USA Logo">
         <ul class="header__list">
           <li class="header__list-item header__list-item_active">
@@ -100,7 +100,7 @@
             <h2 class="places__title">Maine</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="global.llbean.com">global.llbean.com</a>
+              <a class="places__link" href="https://global.llbean.com/">global.llbean.com</a>
             </div>
             <img class="places__image" src="images/place-maine.jpg" alt="Maine Lighthouse Rocky Coast">
             <div class="places__paragraph-block">
@@ -113,7 +113,7 @@
             <h2 class="places__title">New Hampshire</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="timberland.com">timberland.com</a>
+              <a class="places__link" href="https://timberland.com">timberland.com</a>
             </div>
             <img class="places__image" src="images/place-new-hampshire.jpg" alt="New Hampshire Valley Road">
             <div class="places__paragraph-block">
@@ -126,7 +126,7 @@
             <h2 class="places__title">New York</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="ge.com">ge.com</a>
+              <a class="places__link" href="https://ge.com">ge.com</a>
             </div>
             <img class="places__image" src="images/place-new-york.jpg" alt="New York City Road">
             <div class="places__paragraph-block">
@@ -138,7 +138,7 @@
             <h2 class="places__title">Erie, PA</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="fws.gov">fws.gov</a>
+              <a class="places__link" href="https://fws.gov">fws.gov</a>
             </div>
             <img class="places__image" src="images/place-pennsylvania.jpg" alt="Pennsylvania Erie">
             <div class="places__paragraph-block">
@@ -151,7 +151,7 @@
             <h2 class="places__title">Ohio</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="cedarpoint.com">cedarpoint.com</a>
+              <a class="places__link" href="https://cedarpoint.com">cedarpoint.com</a>
             </div>
             <img class="places__image" src="images/place-ohio.jpg" alt="Windmill">
             <div class="places__paragraph-block">
@@ -163,10 +163,11 @@
       </section>
       
       <section class="cover">
-        <h2 class="cover__title border-green">Historic Route 66</h2>
-        <p class="cover__subtitle border-green">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
-        <!-- __overlay -->
-        <!-- __background -->
+        <div class="cover__overlay">
+          <h2 class="cover__title">Historic Route 66</h2>
+          <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
+        </div>
+        
       </section>
 
     </main>
