--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             <h2 class="places__title">Maine</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="https://global.llbean.com/">global.llbean.com</a>
+              <a class="places__link" href="https://global.llbean.com/shop/L.L.Bean-Continental-Rucksack/122952.html?bc=50-816&csp=f&feat=816-GN1">global.llbean.com</a>
             </div>
             <img class="places__image" src="images/place-maine.jpg" alt="Maine Lighthouse Rocky Coast">
             <div class="places__paragraph-block">
@@ -113,7 +113,7 @@
             <h2 class="places__title">New Hampshire</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="https://timberland.com">timberland.com</a>
+              <a class="places__link" href="https://www.timberland.com/timberlandpro.html">timberland.com</a>
             </div>
             <img class="places__image" src="images/place-new-hampshire.jpg" alt="New Hampshire Valley Road">
             <div class="places__paragraph-block">
@@ -126,7 +126,7 @@
             <h2 class="places__title">New York</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="https://ge.com">ge.com</a>
+              <a class="places__link" href="https://ge.com/about-us">ge.com</a>
             </div>
             <img class="places__image" src="images/place-new-york.jpg" alt="New York City Road">
             <div class="places__paragraph-block">
@@ -138,7 +138,7 @@
             <h2 class="places__title">Erie, PA</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="https://fws.gov">fws.gov</a>
+              <a class="places__link" href="https://fws.gov/refuge/erie">fws.gov</a>
             </div>
             <img class="places__image" src="images/place-pennsylvania.jpg" alt="Pennsylvania Erie">
             <div class="places__paragraph-block">
@@ -151,7 +151,7 @@
             <h2 class="places__title">Ohio</h2>
             <div class="places__website">
               <h3 class="places__url-heading">URL</h3>
-              <a class="places__link" href="https://cedarpoint.com">cedarpoint.com</a>
+              <a class="places__link" href="https://www.cedarpoint.com">cedarpoint.com</a>
             </div>
             <img class="places__image" src="images/place-ohio.jpg" alt="Windmill">
             <div class="places__paragraph-block">
@@ -163,11 +163,10 @@
       </section>
       
       <section class="cover">
-        <div class="cover__overlay">
-          <h2 class="cover__title">Historic Route 66</h2>
-          <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
-        </div>
-        
+          <a class="cover__overlay" href="https://www.nps.gov/nr/travel/route66/maps66.html">
+            <h2 class="cover__title">Historic Route 66</h2>
+            <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
+          </a>
       </section>
 
     </main>
@@ -176,9 +175,9 @@
       <div class="footer__blocks">
         <nav class="footer__block">
           <ul class="footer__list">
-            <li class="footer__list-item"><a class="footer__link" href="#">Maps</a></li>
-            <li class="footer__list-item"><a class="footer__link" href="#">Weather</a></li>
-            <li class="footer__list-item"><a class="footer__link" href="#">Calendar</a></li>
+            <li class="footer__list-item"><a class="footer__link" href="https://yandex.com/maps">Maps</a></li>
+            <li class="footer__list-item"><a class="footer__link" href="https://yandex.com/weather/moscow">Weather</a></li>
+            <li class="footer__list-item"><a class="footer__link" href="https://calendar.yandex.ru">Calendar</a></li>
           </ul>
         </nav>
         <div class="footer__block">
