media query updates

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body class="page">
   <div class="page__wrapper">
-
     <header class="header">
       <nav class="header__nav-bar">
-        <img class="logo" src="images/logo.svg" alt="The USA Logo">
+        <div class="header__logo">
+          <img class="header__logo-img" src="images/logo.svg" alt="The USA Logo">
+        </div>
         <ul class="header__list">
           <li class="header__list-item header__list-item_active">
             <a class="header__lang-link" href="#">En</a>
@@ -23,16 +24,13 @@
         </ul>
       </nav>
     </header>
-
     <main class="main">
-
       <section class="lead">
         <h1 class="lead__title">From Portland to Portland</h1>
         <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
         <img class="lead__image" src="images/lead-mountains.jpg" alt="Portland Mountains">
         <p class="lead__caption">Your journey starts here</p>
       </section>
-
       <section class="intro">
         <h2 class="intro__title">Know the country you live in a little better</h2>
         <p class="intro__subtitle">That's exactly what we have arranged for you via this travel story</p>
@@ -52,7 +50,6 @@
           </li>
         </ul>
       </section>
-
       <section class="photo-grid">
         <ul class="photo-grid__list">
           <li class="photo-grid__item">
@@ -93,7 +90,6 @@
           </li>
         </ul>
       </section>
-      
       <section class="places">
         <ul class="places__list">
           <li class="places__item">
@@ -161,16 +157,13 @@
           </li>
         </ul>
       </section>
-      
       <section class="cover">
-          <a class="cover__overlay" href="https://www.nps.gov/nr/travel/route66/maps66.html">
+          <a class="cover__overlay" href="https://www.nps.gov/subjects/travelroute66/index.htm">
             <h2 class="cover__title">Historic Route 66</h2>
             <p class="cover__subtitle">The Main Street of America from Santa Monica, Cal. to Chicago, Ill.</p>
           </a>
       </section>
-
     </main>
-
     <footer class="footer">
       <div class="footer__blocks">
         <nav class="footer__block">
