--- a/index.html
+++ b/index.html
@@ -24,8 +24,10 @@
       <section class="lead">
         <h1 class="lead__title">From Portland to Portland</h1>
         <p class="lead__subtitle">An epic bicycle journey from Portland, ME. to Portland, OR</p>
-        <img class="lead__image" src="images/lead-mountains.jpg" alt="Portland Mountains">
-        <figcaption class="lead__caption">Your journey starts here</figcaption>
+        <figure class="lead__figure">
+          <img class="lead__image" src="images/lead-mountains.jpg" alt="Portland Mountains">
+          <figcaption class="lead__caption">Your journey starts here</figcaption>
+        </figure>
       </section>
       <section class="intro">
         <h2 class="intro__title">Know the country you live in a little better</h2>
